--- a/case-studies.tex
+++ b/case-studies.tex
@@ -1,6 +1,7 @@
 \chapter{Case Studies}
 \label{ch:case-studies}
 
-\section{Masked Convolution Filters in Image Processing}
+\section{Masked Convolution Filters for Image Processing}
+\label{se:convolution}
 
 \section{Optimizing Higher-Order Functions in MATLAB}
