--- a/figures/kblpp-ksf/caption.tex
+++ b/figures/kblpp-ksf/caption.tex
@@ -1,1 +1,1 @@
-\label{fig:kblpp-ksf} 4-SF resulting from the execution trace of Figure~\ref{fig:kblpp-example}.
+\label{fig:kblpp-ksf} 4-SF resulting from the execution trace of \myfigure\ref{fig:kblpp-example}.
