--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -581,7 +581,7 @@
   Year = {2006}
 }
 
-@article{Manerikar2009,
+@article{Manerikar09,
   title = {{Frequent Items in Streaming Data: An Experimental Evaluation of the State-of-the-art}},
   journal = {Data \& Knowledge Engineering},
   volume = {68},
@@ -595,7 +595,7 @@
   keywords = {Frequent item, Data streams, Stream mining}
 }
 
-@inproceedings{Delia2011,
+@inproceedings{Delia11,
   Acmid = {1993559},
   Address = {New York, NY, USA},
   Author = {D'Elia, Daniele Cono and Demetrescu, Camil and Finocchi, Irene},
@@ -940,4 +940,22 @@
   publisher = {IEEE Computer Society},
   address = {Washington, DC, USA},
   doi = {10.1109/CGO.2004.1281678}
+}
+
+@inproceedings{DElia13,
+  author = {D'Elia, Daniele Cono and Demetrescu, Camil},
+  title = {{Ball-Larus Path Profiling Across Multiple Loop Iterations}},
+  booktitle = {Proceedings of the 2013 ACM SIGPLAN International Conference on Object Oriented Programming Systems Languages \&\#38; Applications},
+  series = {OOPSLA '13},
+  year = {2013},
+  isbn = {978-1-4503-2374-1},
+  location = {Indianapolis, Indiana, USA},
+  pages = {373--390},
+  numpages = {18},
+  url = {http://doi.acm.org/10.1145/2509136.2509521},
+  doi = {10.1145/2509136.2509521},
+  acmid = {2509521},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {dynamic program analysis, instrumentation, profiling}
 }
