--- a/figures/hcct-venn/caption.tex
+++ b/figures/hcct-venn/caption.tex
@@ -1,1 +1,1 @@
-\label{fig:hcct-venn} Tree data structures and calling contexts classification. Graphical notation S $\uparrow$ T indicates that T is the minimal subtree of the CCT spanning all nodes in S and the CCT root.
+\label{fig:hcct-venn} Tree data structures and calling contexts classification. We use the graphical notation S $\uparrow$ T to indicate that T is the minimal subtree of the CCT spanning all nodes in S and their ancestors.
