--- a/hcct.tex
+++ b/hcct.tex
@@ -60,7 +60,10 @@ sjeng & 57 & 221 & OOM & 28\,370\,207\,811 \\
 \ifauthorea{\newline}{\vspace{-4mm}}
 
 %\mynote{Add reference to related work section for the CCT?}
-\noindent Calling context trees (CCTs) offer a compact representation for context-sensitive information. In fact, a CCT yields a more accurate profile than a {\em call graph} (which can sometimes drive to misleading conclusions~\cite{Ponder88, Spivey04}) in a space that is typically several orders of magnitude smaller than the space required to maintain a {\em call tree}. Also, many techniques have been proposed over the years to reduce the overhead for its construction.
+\noindent Calling context trees (CCTs) offer a compact representation for context-sensitive information. In fact, a CCT yields a more accurate profile than a {\em call graph} (which can sometimes drive to misleading conclusions~\cite{Ponder88, Spivey04}) in a space that is typically several orders of magnitude smaller than
+that
+%the space
+required to maintain a {\em call tree}. Also, many techniques have been proposed over the years to reduce the overhead for its construction.
 %, by trading accuracy for performance.
 
 However, even CCTs may be very large and difficult to analyze in several applications~\cite{Bond07,Zhuang06}; their sheer size might also hurt execution time, because of poor access locality during construction and query. As an example, we report in \mytable\ref{tab:hcct-CCTsize} numbers collected for short usage sessions of off-the-shelf Linux applications and for benchmarks from popular suites. Under the optimistic assumption that each CCT node requires 20 bytes for its representation on a 32-bit architecture\footnote{From maintaining routine ID, call site, and a performance metric as {\tt int} fields, along with two pointers for a first-child, next-sibling tree representation. Previous works~\cite{Ammons97,Spivey04} use larger nodes.}, nearly 1 GB of memory is needed just to maintain OpenOffice Calc's 48-million-node CCT.
