--- a/header.tex
+++ b/header.tex
@@ -64,14 +64,27 @@
 \newenvironment{myproofsketch}
 {\noindent{\sc Proof} (Sketch).}{\hspace*{\fill}$\Box$\par\vspace{2mm}}
 
-% macros
+%% macros
 \newcommand{\missing}{\textbf{XXX}}
 \newcommand{\algmissing}{Sorry, I still have to typeset the algorithm for Authorea :-) Check GitHub instead.}
+\newcommand{\etal}{{\em et al.}}
+
+% HCCT
 \newcommand{\gcc}{{\tt gcc}}
 \newcommand{\gprof}{{\tt gprof}}
 \newcommand{\spacesaving}{Space-Saving}
+
+% k-BLPP
 \newcommand{\kipf}{\mbox{$k$-IPF}}
 \newcommand{\ksf}{\mbox{$k$-SF}}
 \newcommand{\kblpp}{\mbox{$k$-BLPP}}
 \newcommand{\blpp}{\mbox{BLPP}}
-\newcommand{\etal}{{\em et al.}}
+
+% OSRKit
+\newcommand{\osrkit}{{\sf OSRKit}}
+\newcommand{\fbase}{$\textsf{f}$}
+\newcommand{\fvariant}{$\textsf{f'}$}
+\newcommand{\fosrfrom}{$\textsf{f}_{\textsf{from}}$}
+\newcommand{\fosrto}{$\textsf{f}\textsf{'}_{\textsf{to}}$}
+\newcommand{\fstub}{$\textsf{f}_{\textsf{stub}}$}
+\newcommand{\osrpoint}{$\textsf{L}$}
